crates/baml-bridge-derive/tests/ui/nested_unknown_filter.stderr
error: Template uses unknown filter 'nonexistent_filter'
 --> tests/ui/nested_unknown_filter.rs:5:14
  |
5 |     #[render(template = "{{ value | nonexistent_filter }}")]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
